<resources>
    <string name="app_name">TimePlaner</string>
    <string name="startworking">start working</string>
    <string name="history">history</string>
    <string name="details">DETAILS</string>
    <string name="finishworking">finish working</string>
    <string name="part_time">3/4</string>
    <string name="time_part">czesc etatu</string>
    <string name="count">wylicz</string>
    <string name="work_hours">godzin roboczych:</string>
    <string name="from">od:</string>
    <string name="to">do:</string>
    <string name="start">START</string>
    <string name="finish">FINISH</string>
    <string name="duration">DURATION</string>
    <string name="date">DATE</string>
    <string name="show">show</string>
</resources>
