<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="32dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textViewDataHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:text="@string/date"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textViewTimeStartHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:text="@string/start"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textViewTimeEndHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:text="@string/finish"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textViewPeriodHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:text="@string/duration"
        android:textAlignment="center" />


</LinearLayout>