<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center"
        android:text="@string/zero_time"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnStartWorking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startworking" />

            <Button
                android:id="@+id/btnFinishWorking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finishworking" />
        </LinearLayout>

        <Button
            android:id="@+id/btnDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details" />

        <Button
            android:id="@+id/btnHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history" />

    </LinearLayout>
</LinearLayout>
