<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="20dp">

    <LinearLayout
        android:id="@+id/linear_layout_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="114dp"
                android:layout_height="44dp"
                android:layout_marginStart="8dp"
                android:text="@string/time_part"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextPartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/part_time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewFrom"
                android:layout_width="114dp"
                android:layout_height="44dp"
                android:layout_margin="8dp"
                android:text="@string/from"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextFrom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTo"
                android:layout_width="114dp"
                android:layout_height="44dp"
                android:layout_margin="8dp"
                android:text="@string/to"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextTo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/count"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear_layout_result"
        android:layout_width="match_parent"
        android:layout_height="202dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCount"
        app:layout_constraintVertical_bias="0.906">

        <TextView
            android:id="@+id/textWorkHour"
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/work_hours"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textWorkHourCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="160"
            android:textSize="44sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>