<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="martakonik.timeplaner.ui.history.HistoryActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewFrom"
                android:layout_width="32dp"
                android:layout_height="44dp"
                android:layout_margin="8dp"
                android:text="@string/from"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextFrom"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:inputType="date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTo"
                android:layout_width="32dp"
                android:layout_height="44dp"
                android:layout_margin="8dp"
                android:text="@string/to"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextTo"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:inputType="date" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonShowHistory"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/show"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonShowHistory">

        <include
            android:id="@+id/include"
            layout="@layout/recycler_view_header" />
    </FrameLayout>
</android.support.constraint.ConstraintLayout>
